--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@trpc/client": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "aos": "^2.3.4",
     "class-variance-authority": "^0.7.0",
     "geist": "^1.3.0",
     "next": "^14.2.1",
@@ -34,6 +35,7 @@
     "zod": "^3.23.3"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/eslint": "^8.56.2",
     "@types/node": "^20.11.20",
     "@types/react": "^18.2.57",
