--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "aos": "^2.3.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.1.3",
     "geist": "^1.3.0",
     "lucide-react": "^0.383.0",
     "next": "^14.2.1",
