--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,8 +37,7 @@
     "**/*.tsx",
     "**/*.cjs",
     "**/*.js",
-    ".next/types/**/*.ts",
-    ".appScript.js"
+    ".next/types/**/*.ts"
   ],
   "exclude": ["node_modules"]
 }
