--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@next/third-parties": "^14.2.4",
     "@octokit/rest": "^20.1.1",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-slot": "^1.0.2",
